# pdf-tool

./: CHANGELOG.md  GUI_ANALYSIS_AND_PLAN.md  GUI_STYLE_GUIDE.md  README.md  UI_UPDATE_SUMMARY.md  USAGE.md  build_exe.py  pdf-tool-gui-macos.spec  pdf-tool-gui.spec  pdf-tool.spec  pdf_tool_entry.py  pdf_tool_gui_entry.py  pyproject.toml
.claude/: settings.json
.claude/agents/moai/: builder-agent.md  builder-plugin.md  builder-skill.md  expert-backend.md  expert-debug.md  expert-devops.md  (+10 more)
.github/workflows/: build-exe.yml  build-windows-exe.yml
.moai/: manifest.json
.moai/project/: product.md  structure.md  tech.md
.moai/reports/: SPEC-PDF-003-quality-report.md
docs/api/: design-system.md  progress-callback.md
src/pdf_tool/: __init__.py  cli.py
tests/: conftest.py  test_accessibility_labels.py  test_animation.py  test_cli.py  test_cli_progress.py  test_colors_apple.py  test_compress.py  test_constants_apple.py  test_cut.py  test_design_tokens.py  test_eta.py  test_file_utils.py  test_focus_management.py  test_gui_app.py  test_gui_base_page.py  test_gui_constants.py  test_gui_error_log.py  test_gui_layout.py  test_gui_pages.py  test_gui_preview.py  test_gui_progress_integration.py  test_gui_theme.py  test_gui_widgets.py  test_high_contrast.py  test_icons.py  test_image_converter.py  test_info.py  test_keyboard_nav.py  test_macos_widgets.py  test_merge.py  test_page_range.py  test_page_sizes.py  test_pdf_handler.py  test_progress_callbacks.py  test_resize.py  test_rotate.py  test_split.py  test_theme_darkdetect.py  test_validators.py  test_watermark.py  (+1 more)
(+115 files in other folders)
